No import tag.scss

--- a/_sass/components/__all.scss
+++ b/_sass/components/__all.scss
@@ -6,7 +6,7 @@
 @import 'logo';
 @import 'nav';
 @import 'off-canvas';
-@import 'tags';
+// @import 'tags';
 @import 'buttons';
 @import 'post-card';
 @import 'pagination';
